--- a/index.html
+++ b/index.html
@@ -165,11 +165,12 @@ h1 {
   <img src="https://i.ibb.co/jZsGXYCJ/6a4aeabc-03b8-4241-95c5-b467eb08bb57.jpg" alt="UPI QR" class="qr">
   <p style="color:#fff;">Step 2: Tap your UPI app to open it</p>
 
-  <a href="intent://upi#Intent;scheme=upi;package=com.google.android.apps.nbu.paisa.user;end" class="btn">Google Pay</a>
-  <a href="intent://upi#Intent;scheme=upi;package=com.phonepe.app;end" class="btn">PhonePe</a>
-  <a href="intent://upi#Intent;scheme=upi;package=net.one97.paytm;end" class="btn">Paytm</a>
-  <a href="intent://upi#Intent;scheme=upi;package=in.org.npci.upiapp;end" class="btn">BHIM</a>
-  <a href="upi://pay" class="btn">Generic UPI App</a>
+  <!-- Buttons now ONLY open the apps -->
+  <a href="upi://pay" class="btn">Open Generic UPI App</a>
+  <a href="intent://upi#Intent;scheme=upi;package=com.google.android.apps.nbu.paisa.user;end" class="btn">Open Google Pay</a>
+  <a href="intent://upi#Intent;scheme=upi;package=com.phonepe.app;end" class="btn">Open PhonePe</a>
+  <a href="intent://upi#Intent;scheme=upi;package=net.one97.paytm;end" class="btn">Open Paytm</a>
+  <a href="intent://upi#Intent;scheme=upi;package=in.org.npci.upiapp;end" class="btn">Open BHIM</a>
 </div>
 
 <p class="footer">⚡ Screenshot • Open App • Pay Instantly ⚡</p>
