--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@ h1 {
 
   <!-- Buttons now ONLY open the apps -->
   <a href="upi://pay" class="btn">Open Generic UPI App</a>
-  <a href="intent://upi#Intent;scheme=upi;package=com.google.android.apps.nbu.paisa.user;end" class="btn">Open Google Pay</a>
-  <a href="intent://upi#Intent;scheme=upi;package=com.phonepe.app;end" class="btn">Open PhonePe</a>
-  <a href="intent://upi#Intent;scheme=upi;package=net.one97.paytm;end" class="btn">Open Paytm</a>
-  <a href="intent://upi#Intent;scheme=upi;package=in.org.npci.upiapp;end" class="btn">Open BHIM</a>
+<a href="gpay://" class="btn">Open Google Pay</a>
+<a href="phonepe://" class="btn">Open PhonePe</a>
+<a href="paytmmp://" class="btn">Open Paytm</a>
+<a href="bhim://" class="btn">Open BHIM</a>
 </div>
 
 <p class="footer">⚡ Screenshot • Open App • Pay Instantly ⚡</p>
